--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
 </head>
 <body>
@@ -105,10 +106,10 @@
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Shop</a></p>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Rewards</a></p>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">About</a></p>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Support</a></p>
+                    <p><a href="#" class="text-white text-decoration-none">Shop</a></p>
+                    <p><a href="#" class="text-white text-decoration-none">Rewards</a></p>
+                    <p><a href="#" class="text-white text-decoration-none">About</a></p>
+                    <p><a href="#" class="text-white text-decoration-none">Support</a></p>
                 </div>
                 <div class="col-md-5 col-lg-5 col-xl-5 mx-auto mt-3">
                     <h5 class="mb-4 ">CONTACT US</h5>
@@ -116,9 +117,9 @@
                         Blk 31, Ngee Ann Polytechnic <br>
                         535 Clementi Rd, Singapore 599489
                     </p>
-                    <p><a href="#" class="text-white">>EMAIL ADDRESS HERE<</a></p>
+                    <p><a href="mailto:s10227932@connect.np.edu.sg" class="text-white text-decoration-none">Email: s10227932@connect.np.edu.sg</a></p>
                     <div class="d-flex">
-                        <ul>
+                        <ul class="ps-0">
                             <li><span class="social-icon social-facebook"><i class="fa fa-facebook"></i></span></li>
                             <li><span class="social-icon social-google"><i class="fa fa-google"></i></span></li>
                             <li><span class="social-icon social-linkedin"><i class="fa fa-linkedin"></i></span></li>
@@ -138,8 +139,8 @@
                 <div class="col-md-6 mt-3">
                     <div class="text-start text-md-end">
                         <span>
-                            <a href="termsofservice.html" class="text-white" style="text-decoration: none;">Terms of Service</a> |
-                            <a href="datanotice.html" class="text-white" style="text-decoration: none;">Data Protection Notice</a>
+                            <a href="termsofservice.html" class="text-white text-decoration-none">Terms of Service</a> |
+                            <a href="datanotice.html" class="text-white text-decoration-none">Data Protection Notice</a>
                         </span>
                     </div>
                 </div>
