--- a/datanotice.html
+++ b/datanotice.html
@@ -210,41 +210,51 @@
     <footer class="bg-dark text-white pt-5 pb-4">
         <div class="container text-md-start">
             <div class="row text-md-start">
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                <div class="col-md-3 col-lg-3 col-xl-5 mx-auto mt-3 ms-0">
                     <h5 class="mb-4 font-weight-bold"><strong>COM</strong>ZONE</h5>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas lobortis imperdiet mauris et imperdiet. Fusce elementum sollicitudin viverra. Cras diam.
+                        Singapore's #1 Customisable High Performance PC Builders.
                     </p>
+                    <img class="me-4" height="80px" width="80px" src="assets/img/index/best-badge.png" alt="">
+                    <img height="80px" width="80px" src="assets/img/index/certified-badge.png" alt="">
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
                     <h5 class="mb-4 font-weight-bold">NAVIGATION</h5>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Shop</a></p>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Rewards</a></p>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">About</a></p>
-                    <p><a href="#" class="text-white" style="text-decoration: none;">Support</a></p>
+                    <p><a href="explore.html" class="text-white text-decoration-none">Shop</a></p>
+                    <p><a href="#" class="text-white text-decoration-none">Rewards</a></p>
+                    <p><a href="#" class="text-white text-decoration-none">About</a></p>
+                    <p><a href="#" class="text-white text-decoration-none">Support</a></p>
                 </div>
-                <div class="col-md-5 col-lg-5 col-xl-5 mx-auto mt-3">
+                <div class="col-md-5 col-lg-5 col-xl-3 mx-auto mt-3">
                     <h5 class="mb-4 ">CONTACT US</h5>
                     <p>
                         Blk 31, Ngee Ann Polytechnic <br>
                         535 Clementi Rd, Singapore 599489
                     </p>
-                    <p><a href="#" class="text-white">>EMAIL ADDRESS HERE<</a></p>
-                    <p>>SOCIAL MEDIA LINKS HERE<</p>
+                    <p><a href="mailto:fake_contact@comzone.sg" class="text-white text-decoration-none">Email: fake_contact@comzone.sg</a></p>
+                    <div class="d-flex">
+                        <ul class="social-icon-ul ps-0">
+                            <li><span class="social-icon social-facebook"><i class="fab fa-facebook"></i></span></li>
+                            <li><span class="social-icon social-google"><i class="fab fa-google"></i></span></li>
+                            <li><span class="social-icon social-linkedin"><i class="fab fa-linkedin"></i></span></li>
+                            <li><span class="social-icon social-instagram"><i class="fab fa-instagram"></i></span></li>
+                            <li><span class="social-icon social-twitter"><i class="fab fa-twitter"></i></span></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <hr class="mb-4">
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <span>&copy; 2022 COMZONE. All Rights Reserved.<br></span>
-                    <span style="font-size: 12px;">DESIGNED BY <a href="https://www.github.com/gg2shadow" style="text-decoration: none;">XIAO YAOJIE</a> &
-                        <a href="https://www.github.com/iirquhs-np" style="text-decoration: none;">SHUQRI SHAIFUDDIN</a></span>
+                    <span style="font-size: 12px;">DESIGNED BY <a href="https://www.github.com/gg2shadow" class="text-decoration-none">XIAO YAOJIE</a> &
+                        <a href="https://www.github.com/iirquhs-np" class="text-decoration-none">SHUQRI SHAIFUDDIN</a></span>
                 </div>
                 <div class="col-md-6 mt-3">
                     <div class="text-start text-md-end">
                         <span>
-                            <a href="termsofservice.html" class="text-white" style="text-decoration: none;">Terms of Service</a> |
-                            <a href="datanotice.html" class="text-white" style="text-decoration: none;">Data Protection Notice</a>
+                            <a href="termsofservice.html" class="text-white text-decoration-none">Terms of Service</a> |
+                            <a href="datanotice.html" class="text-white text-decoration-none">Data Protection Notice</a>
                         </span>
                     </div>
                 </div>
@@ -254,9 +264,23 @@
     <!-- FOOTER: END -->
 
 
+    <!-- BACK TO TOP BUTTON: START -->
+    <button
+            type="button"
+            class="btn btn-danger btn-floating btn-lg"
+            id="btn-back-to-top"
+    >
+        <i class="fas fa-arrow-up"></i>
+    </button>
+    <!-- BACK TO TOP BUTTON: END -->
+
+
     <!-- JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+    <script src="js/footer.js"></script>
+    <script src="js/backToTop.js"></script>
 
 </body>
 </html>
