--- a/termsofservice.html
+++ b/termsofservice.html
@@ -199,9 +199,9 @@
                     <p><a href="mailto:fake_contact@comzone.sg" class="text-white text-decoration-none">Email: fake_contact@comzone.sg</a></p>
                     <div class="d-flex">
                         <ul class="social-icon-ul ps-0">
-                            <li><span class="social-icon social-facebook"><i class="fa fa-facebook"></i></span></li>
+                            <li><span class="social-icon social-facebook"><i class="fab fa-facebook"></i></span></li>
                             <li><span class="social-icon social-google"><i class="fab fa-google"></i></span></li>
-                            <li><span class="social-icon social-linkedin"><i class="fabfa-linkedin"></i></span></li>
+                            <li><span class="social-icon social-linkedin"><i class="fab fa-linkedin"></i></span></li>
                             <li><span class="social-icon social-instagram"><i class="fab fa-instagram"></i></span></li>
                             <li><span class="social-icon social-twitter"><i class="fab fa-twitter"></i></span></li>
                         </ul>
